test/parser/good/vars.ks
int main()
{
    int a = 5;
    int b = 4;
    int c = 6;
    int d = 10;
    a = b + c;
    b = a - d;
    c = b + c;
    d = a - d;
    return d;
}