test/parser/bad/else_without_for.ks
int main()
{
    int a = 5;
    else
    {
        a = 4;
    }
    return a;
}